--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -90,7 +90,9 @@
   padding-bottom: 1px;
 }
 
-.title.jobTitle {
+.title.jobTitle.link {
+  font-size: 24px;
+  color: rgb(0, 182, 182);
   padding-top: 10px;
   margin-bottom: 5px;
 }
@@ -104,6 +106,14 @@
   font-size: 14px;
   font-weight: 600;
   color: dimgrey;
+}
+
+.content.jobItemBody {
+  line-height: 1.5;
+}
+
+.card-content.jobItemContent {
+  padding-top: 12px;
 }
 
 .field.is-grouped.submitPost {
@@ -251,4 +261,13 @@ $progress-bar-background-color: #dbdbdb;
   100% {
     background-position: -200% 0;
   }
+}
+
+.ql-editor {
+  min-height: 10rem;
+  font-size: 1rem;
+  color: black;
+  font-family: "Open Sans", sans-serif;
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+  border-radius: 4px;
 }
